--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
     </div>
     <!-- 얘네 socket.io 바로 밑에 놓으면 안 됩니다. 소켓이 먼저 로드 되기전에 얘네가 비동기적으로 먼저 실행되나봄 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/js/socket/chat.js"></script>
+    <script type="module" src="/js/socket/meeting.chat.js"></script>
+    <script type="module" src="/js/socket/couple.chat.js"></script>
     <script type="module" src="/js/socket/vote.js"></script>
     <!-- <script src="https://cdn.socket.io/4.2.0/socket.io.min.js"></script> -->
   </body>
