--- a/public/main.html
+++ b/public/main.html
@@ -5,12 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/main.style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Blenting</title>
 </head>
 
 <body>
+    <button type="button" id="signup" class="btn btn-primary">sign up</button>
+    <button type="button" id="signin" class="btn btn-primary">sign in</button>
+    <button type="button" id="signout" class="btn btn-primary">sign out</button>
+    <button type="button" id="profile" class="btn btn-primary">프로필</button>
     <button id="match">매칭 하기</button>
-    <script type="module" src="/matching.main.js"></script>
+
+    <script type="module" src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
