--- a/public/admin/adminMain.html
+++ b/public/admin/adminMain.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>관리자님 환영합니다.</h1>
-    <!-- html 폼 컨트롤 <select> 드롭다운 만들기  -->
+    <!-- 폼태그 안에는 <select>라는 드롭다운이 있다. -->
     <form id="filterForm">
-      <select name="filter">
+      <!-- <select name="filter">
         <option value="">filter</option>
         <option value="height">height</option>
         <option value="figure">figure</option>
@@ -24,7 +24,7 @@
         <option value="reportCount">ReportCount</option>
         <option value="reportPoint">ReportPoint</option>
         <option value="meetingCount">MeetingCount</option>
-      </select>
+      </select> -->
       <!-- 추가 필터링 옵션 ...?-->
       <button type="submit">검색</button>
     </form>
@@ -36,18 +36,55 @@
         <!-- <tr>: 테이블 행(table row)을 정의 -->
         <tr>
           <!-- <th>: 테이블 헤더 셀을 정의 행 또는 열의 제목 정보를 포함 -->
+          <!-- th로 감싸진 데이터를 td로 뭔가를 데이터를 불러오게 해주는걸 js 에서 하는 것 같다. -->
           <th>ID</th>
-          <th>height</th>
-          <th>figure</th>
-          <th>want1</th>
-          <th>want2</th>
-          <th>want3</th>
-          <th>MBTI</th>
-          <th>Ticket</th>
+          <th>
+            height
+            <select id="heightDropdown" name="height">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            gender
+            <select id="genderDropdown" name="gender">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            figure
+            <select id="figureDropdown" name="figure">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            want1
+            <select id="want1Dropdown" name="want1">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            want2
+            <select id="want2Dropdown" name="want2">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            want3
+            <select id="want3Dropdown" name="want3">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <th>
+            MBTI
+            <select id="mbtiDropdown" name="mbti">
+              <option value="">Select</option>
+            </select>
+          </th>
+          <!-- <th>Ticket</th> -->
           <th>Nick <br />Name<br /></th>
-          <th>Report <br />Count<br /></th>
+          <!-- <th>Report <br />Count<br /></th>
           <th>Report <br />Point<br /></th>
-          <th>Meeting <br />Count<br /></th>
+          <th>Meeting <br />Count<br /></th> -->
         </tr>
       </thead>
       <!-- 테이블의 본문 부분을 정의합니다. 실제 데이터 행을 포함 -->
