--- a/public/main.html
+++ b/public/main.html
@@ -17,6 +17,7 @@
     <button type="button" id="profile" class="btn btn-primary">프로필</button>
     <button id="match">매칭 하기</button>
 
+    <script src="./js/constants.js"></script>
     <script type="module" src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
