fix: 필터링 기능 버그픽스, 주석 달기

--- a/public/admin/adminMain.html
+++ b/public/admin/adminMain.html
@@ -11,7 +11,7 @@
     <!-- 폼태그 안에는 <select>라는 드롭다운이 있다. -->
     <form id="filterForm">
       <!-- <select name="filter">
-        <option value="">filter</option>
+        <option value="">filter</option> ㄷ디폴트 값
         <option value="height">height</option>
         <option value="figure">figure</option>
         <option value="want1">want1</option>
@@ -26,7 +26,7 @@
         <option value="meetingCount">MeetingCount</option>
       </select> -->
       <!-- 추가 필터링 옵션 ...?-->
-      <button type="submit">검색</button>
+      <!-- <button type="submit">검색</button> -->
     </form>
 
     <!-- <table>: 테이블 생성 -->
@@ -92,7 +92,7 @@
         <!-- 여기에 서버로부터 받은 유저 데이터를 표시합니다 -->
       </tbody>
     </table>
-
+    <!-- <button id="searchButton">검색</button> -->
     <script src="/admin/js/admin.app.js"></script>
   </body>
 </html>
