--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,12 @@
         </div>
         <form id="form" action="">
           <select
-            id="select"
+            id="select-vote-list"
             class="form-select"
             aria-label="Default select example"
           >
             <option selected>지목하기</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+
           </select>
           <input id="input" autocomplete="off" /><button>Send</button>
         </form>
