feat: payment page

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <button id="signin" class="btn">sign in</button>
     <button id="signout" class="btn">sign out</button>
     <button id="profile" class="btn">프로필</button>
+    <button id="payment" class="btn">티켓 충전</button>
     <button id="match" class="btn">매칭 하기</button>
 
     <script src="./js/constants.js"></script>
