--- a/public/admin/adminMain.html
+++ b/public/admin/adminMain.html
@@ -71,15 +71,16 @@
         </tr>
       </thead>
       <!-- 테이블의 본문 부분을 정의합니다. 실제 데이터 행을 포함 -->
-      <tbody>
-        <div id="pagination-controls">
-          <button id="prev-page">Previous</button>
-          <span id="current-page">1</span> / <span id="total-pages">10</span>
-          <button id="next-page">Next</button>
-        </div>
-      </tbody>
+      <tbody></tbody>
     </table>
+    <div id="pagination-controls">
+      <button id="prev-page">Previous</button>
+      <span id="current-page">1</span> / <span id="total-pages">10</span>
+      <button id="next-page">Next</button>
+    </div>
+    <!-- 나머지 테이블 구조 -->
+
     <!-- <button id="searchButton">검색</button> -->
-    <script src="/admin/js/admin.app.js"></script>
+    <script src="/admin/js/admin.app.js" type="module"></script>
   </body>
 </html>
