feat: 마이페이지, 프로필 수정 연결

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       </div>
       <button id="signup" class="custom-btn btn"><span>sign up</span></button>
       <button id="signin" class="custom-btn btn"><span>sign in</span></button>
+      <button id="myPage" class="custom-btn btn"><span>my page</span></button>
       <button id="signout" class="custom-btn btn"><span>sign out</span></button>
       <button id="payment" class="custom-btn btn">
         <span>티켓 충전</span>
