--- a/public/myPage.html
+++ b/public/myPage.html
@@ -9,9 +9,9 @@
   <body>
     <div id="profileContainer">
       <h2 id="detail">마이페이지</h2>
-      <div><span id="userId"></span></div>
+      <!-- <div><span id="userId"></span></div> -->
       <div><strong>email:</strong> <span id="userEmail"></span></div>
-      <div><strong>Password:</strong> <span id="userPassword"></span></div>
+      <!-- <div><strong>Password:</strong> <span id="userPassword"></span></div> -->
       <div><strong>닉네임:</strong> <span id="userNickName"></span></div>
       <div><strong>성별:</strong> <span id="userGender"></span></div>
       <div><strong>키:</strong> <span id="userHeight"></span></div>
@@ -21,6 +21,7 @@
       <div><strong>want3:</strong> <span id="userWant3"></span></div>
       <div><strong>MBTI:</strong> <span id="userMbti"></span></div>
       <div><strong>지역:</strong> <span id="userDistrict"></span></div>
+      <!-- <div><strong>role:</strong> <span id="userRole"></span></div> -->
       <div><strong>자기소개:</strong> <span id="userDescription"></span></div>
       <div><strong>취미:</strong> <span id="userHobby"></span></div>
       <div><strong>직업:</strong> <span id="userJob"></span></div>
@@ -31,7 +32,7 @@
     </div>
     <div class="submitPlace">
       <button type="submit" id="myPageSubmit" class="myPageSubmit">
-        마이페이지.. 프로필 수정 하실?
+        프로필 수정
       </button>
     </div>
     <script src="./js/constants.js"></script>
