--- a/public/chat.html
+++ b/public/chat.html
@@ -29,12 +29,11 @@
             aria-label="Default select example"
           >
             <option selected>지목하기</option>
-
           </select>
           <input id="input" autocomplete="off" /><button>Send</button>
         </form>
       </div>
-      <div id="user-list-container" style="padding: 10px">
+      <div id="user-list-container">
         <div id="user-list-top">
           <h5>대화상대</h5>
         </div>
