--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,14 @@
   <body>
     <div class="body-box">
       <div class="head-box">
-        <div class="main-btn">
+        <div id="main-btn" class="main-btn">
           <img src="./img/icon.jpg" alt="" class="icon" />
           <span class="logo">Blenting</span>
         </div>
-        <img src="./img/profile.jpg" alt="" class="profile-img" />
+        <img id="myPage" src="./img/profile.jpg" alt="" class="profile-img" />
       </div>
       <button id="signup" class="custom-btn btn"><span>sign up</span></button>
       <button id="signin" class="custom-btn btn"><span>sign in</span></button>
-      <button id="myPage" class="custom-btn btn"><span>my page</span></button>
       <button id="signout" class="custom-btn btn"><span>sign out</span></button>
       <button id="payment" class="custom-btn btn">
         <span>티켓 충전</span>
@@ -27,6 +26,7 @@
       <button id="match" class="custom-btn btn"><span>매칭 하기</span></button>
 
       <script src="./js/constants.js"></script>
+      <script src="./js/head.js"></script>
       <script type="module" src="/js/main.js"></script>
     </div>
   </body>
