--- a/public/myPage.html
+++ b/public/myPage.html
@@ -4,38 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
+    <link rel="stylesheet" type="text/css" href="./css/head.style.css" />
     <link rel="stylesheet" href="css/myPage.css" />
   </head>
   <body>
-    <div id="profileContainer">
-      <h2 id="detail">마이페이지</h2>
-      <!-- <div><span id="userId"></span></div> -->
-      <div><strong>email:</strong> <span id="userEmail"></span></div>
-      <!-- <div><strong>Password:</strong> <span id="userPassword"></span></div> -->
-      <div><strong>닉네임:</strong> <span id="userNickName"></span></div>
-      <div><strong>성별:</strong> <span id="userGender"></span></div>
-      <div><strong>키:</strong> <span id="userHeight"></span></div>
-      <div><strong>체형:</strong> <span id="userFigure"></span></div>
-      <div><strong>want1:</strong> <span id="userWant1"></span></div>
-      <div><strong>want2:</strong> <span id="userWant2"></span></div>
-      <div><strong>want3:</strong> <span id="userWant3"></span></div>
-      <div><strong>MBTI:</strong> <span id="userMbti"></span></div>
-      <div><strong>지역:</strong> <span id="userDistrict"></span></div>
-      <!-- <div><strong>role:</strong> <span id="userRole"></span></div> -->
-      <div><strong>자기소개:</strong> <span id="userDescription"></span></div>
-      <div><strong>취미:</strong> <span id="userHobby"></span></div>
-      <div><strong>직업:</strong> <span id="userJob"></span></div>
-      <div><strong>나이:</strong> <span id="userAge"></span></div>
-      <div><strong>ticket:</strong> <span id="userTicket"></span></div>
-      <div><strong>생성일:</strong> <span id="userCreatedAt"></span></div>
-      <div><strong>수정일:</strong> <span id="userUpdatedAt"></span></div>
+    <div class="body-box">
+      <div class="head-box">
+        <div id="main-btn" class="main-btn">
+          <img src="./img/icon.jpg" alt="" class="icon" />
+          <span class="logo">Blenting</span>
+        </div>
+        <img src="./img/profile.jpg" alt="" class="profile-img" />
+      </div>
+    <div class="profileBox">
+      <div class="profileDataBox">
+        <div class="profileDataField">E-mail</div>
+        <span id="userEmail"></span>
+        <div class="profileDataField">닉네임</div>
+        <span id="userNickName"></span>
+        <div class="profileDataField">나이</div>
+        <span id="userAge"></span>
+        <div class="profileDataField">성별</div>
+        <span id="userGender"></span>
+        <div class="profileDataField">MBTI</div>
+        <span id="userMbti"></span>
+        <div class="profileDataField">키</div>
+        <span id="userHeight"></span>
+        <div class="profileDataField">체형</div>
+        <span id="userFigure"></span>
+        <div class="profileDataField">취미</div>
+        <span id="userHobby"></span>
+        <div class="profileDataField">직업</div>
+        <span id="userJob"></span>
+        <div class="profileDataField">지역</div>
+        <span id="userDistrict"></span>
+        <div class="profileDataField">자기소개</div>
+        <span id="userDescription"></span>
+        <div class="profileDataField">이상형 우선순위 1</div>
+        <span id="userWant1"></span>
+        <div class="profileDataField">이상형 우선순위 2</div>
+        <span id="userWant2"></span>
+        <div class="profileDataField">이상형 우선순위 3</div>
+        <span id="userWant3"></span>
+        <div class="profileDataField">티켓</div>
+        <span id="userTicket">
+      </div>
+      <div class="submitPlace">
+        <button type="submit" id="myPageSubmit" class="myPageSubmit">
+          프로필 수정
+        </button>
+      </div>
     </div>
-    <div class="submitPlace">
-      <button type="submit" id="myPageSubmit" class="myPageSubmit">
-        프로필 수정
-      </button>
-    </div>
+    <script src="./js/head.js"></script>
     <script src="./js/constants.js"></script>
     <script type="text/javascript" src="./js/myPage.js"></script>
+    </div>
   </body>
 </html>
