--- a/public/signin.html
+++ b/public/signin.html
@@ -10,7 +10,7 @@
   <body>
     <div class="body-box">
       <div class="head-box">
-        <div class="main-btn">
+        <div id="main-btn" class="main-btn">
           <img src="./img/icon.jpg" alt="" class="icon" />
           <span class="logo">Blenting</span>
         </div>
@@ -42,6 +42,7 @@
         </div>
       </div>
       <script src="./js/constants.js"></script>
+      <script src="./js/head.js"></script>
       <script type="text/javascript" src="./js/signin.js"></script>
     </div>
   </body>
