--- a/public/profile.html
+++ b/public/profile.html
@@ -14,7 +14,7 @@
           <img src="./img/icon.jpg" alt="" class="icon" />
           <span class="logo">Blenting</span>
         </div>
-        <img src="./img/profile.jpg" alt="" class="profile-img" />
+        <img id="myPage" src="./img/profile.jpg" alt="" class="profile-img" />
       </div>
       <div class="profileBox">
         <div class="profileDataBox">
